moves game to just 1 file

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,6 +1,6 @@
 
 <div id='container'>
-<script src='../../assets/javascripts/phasergame.js'></script>
+<script type ='text/javascript' src='/javascripts/phasergame.js'></script>
 </div>
 
 <form id='game_form' action='/games' method='post'>
