--- a/app/assets/stylesheets/multiplayers.scss
+++ b/app/assets/stylesheets/multiplayers.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the multiplayers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#equation_text_div {
+  width: 50%;
+  margin: auto;
+  padding: 30px;
+  font-size: 3em;
+  font-weight: bold;
+  text-align: center;
+}
