--- a/app/views/multiplayers/index.html.erb
+++ b/app/views/multiplayers/index.html.erb
@@ -1,1 +1,8 @@
+<form>
+Player 1: <input id='player_1' type='text'><br>
+Player 2: <input id='player_2' type='text'><br><br>
+</form>
+
+<div id='equation_text_div'></div>
+
 <script type ='text/javascript' src='/javascripts/multi.js'></script>
